--- a/trunk/Admin/scss/partials/_main.scss
+++ b/trunk/Admin/scss/partials/_main.scss
@@ -71,6 +71,14 @@ body:not(.admin-quickbar-is-overlap).admin-quickbar-visible {
   #query-monitor-main {
     width: calc(100% - 322px) !important;
   }
+
+  .interface-interface-skeleton {
+    right: 320px;
+  }
+
+  .edit-post-layout .editor-post-publish-panel {
+    right: 320px;
+  }
 }
 
 .admin-quickbar.toggle .admin-quickbar-inner {
@@ -456,4 +464,8 @@ h2.aqb-settings-headline {
     background-color: rgba(255, 255, 255, 0.1);
     cursor: text;
   }
+}
+
+.wp-block {
+  max-width: 1200px;
 }
